--- a/src/components/Navigation/NavigationItems/NavigationItems.module.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.scss
@@ -3,6 +3,11 @@
   padding: 0;
   list-style: none;
   display: flex;
+  flex-flow: column;
   align-items: center;
   height: 100%;
+
+  @media (width: 500px) {
+    flex-flow: row;
+  }
 }
