--- a/src/components/Navigation/Toolbar/Toolbar.module.scss
+++ b/src/components/Navigation/Toolbar/Toolbar.module.scss
@@ -11,8 +11,18 @@
   padding: 0 20px;
   box-sizing: border-box;
   z-index: 90;
+
+  nav {
+    height: 100%;
+  }
 }
 
-.Toolbar nav {
-  height: 100%;
+.Logo {
+  height: 80%;
+}
+
+.DesktopOnly {
+  @media (max-width: 499px) {
+    display: none;
+  }
 }
